script/kind-session-persistence/tests/ingress-cookie-sticky/backend-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-ingress-cookie-sticky
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami-ingress-cookie-sticky
  template:
    metadata:
      labels:
        app: whoami-ingress-cookie-sticky
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - containerPort: 80
