script/kind-session-persistence/tests/ingress-cookie-sticky/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-ingress-cookie-sticky
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: ingress-sticky
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: whoami-ingress-cookie-sticky
