script/kind-session-persistence/tests/ingress-cookie-sticky/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cookie-sticky
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: whoami-ingress-cookie.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami-ingress-cookie-sticky
                port:
                  number: 80
