script/kind-session-persistence/tests/ingress-cookie-sticky/traefik-values.yaml
image:
  registry: localhost
  repository: traefik
  tag: dev
  pullPolicy: IfNotPresent

versionOverride: v3.6.6

service:
  type: ClusterIP

ingressClass:
  enabled: true
  isDefaultClass: true
  name: traefik

providers:
  kubernetesIngress:
    enabled: true
    ingressClass: traefik
  kubernetesCRD:
    enabled: true
    ingressClass: traefik
    namespaces:
      - default
  kubernetesGateway:
    enabled: true
    experimentalChannel: true
    namespaces:
      - default
      - traefik
    statusAddress:
      service:
        enabled: true
        name: traefik
        namespace: traefik

gateway:
  namespace: default

additionalArguments:
  - "--log.level=DEBUG"
